# dio-fastapi-python-docker

./: Makefile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b497ce2b0da7_init_db.py
workout_api/: main.py  routers.py
workout_api/atletas/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centros_treinamento/: controller.py  models.py  schemas.py
workout_api/contrib/: schemas.py
workout_api/contrib/repository/: models.py
